feature: covers endpoint     refactor: manga model;     refactor: multer config;
